# MicroMentor

./: .gitignore  LICENSE  README.md  check_db.py  pyproject.toml
api/: app.py  requirements.txt
data/: database_schema.sql  etl_pipeline.py  grid_client.py  micro_skills_taxonomy.json  sqlite_schema.sql
docs/: architecture.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AICoachChat.js  BenchmarkComparison.js  ChampionAnalytics.js  GoalTracking.js  HistoricalTrends.js  HypotheticalScenarios.js  ImprovementPlan.js  InsightsPanel.js  LoadingSkeleton.js  MacroReview.js  MatchHistory.js  MicroSkillsRadar.js  PDFExport.js  PlayerComparison.js
models/: benchmark_comparator.py  performance_predictor.py  skill_scorer.py
tests/: test_api.py
